--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,8 +19,16 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    env:
+      TEST_ARCH: ${{ matrix.arch }}
+    
+    strategy:
+      matrix:
+        arch: [ amd64, arm64 ]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - run: echo $TEST_ARCH
       - run: echo hello
       - run: echo hello >&2
