--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,11 +21,11 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-      TEST_ARCH: ${{ matrix.arch }}
+      TEST_ARCH: ${{ matrix.arch == "amd64" && "c6g.medium" || ( matrix.arch == "arm64" && "c5.medium" ) || "default" }}
     
     strategy:
       matrix:
-        arch: [ amd64, arm64 ]
+        arch: [ amd64, arm64, risc-v ]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
